feat(database): :zap: update database file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,5 +66,8 @@
         "compare": "cpp",
         "concepts": "cpp",
         "algorithm": "cpp"
-    }
+    },
+    "conventionalCommits.scopes": [
+        "database"
+    ]
 }
